--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx bxs-paint skills__icon'></i>
+                            <span class="skills__name">React</span>
+                        </div>
+                        <div class="skills__bar skills__Reacr">
+                            
+                        </div>
+                        <div>
+                            <span class="skills__percentage">20%</span>
+                        </div>
+                    </div>
+                </div>
                     
                     <div>              
                         <img src="assets/img/work3.jpg" alt="" class="skills__img">
