--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://www.linkedin.com/in/sidharth-lohchab-742b9a21b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                     class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://leetcode.com/Sidharth1629/" class="home__social-icon"><i class="bx bx-code-curly"></i></a>
-                <a href="/port/Resume.pdf" download = "Sidharth Lohchab" class="home__social-icon"><i class="bx bxs-spreadsheet"></i></a>
+                <a href="/port/Resume.pdf" download = "Sidharth Lohchab" class="home__social-icon"><i class="bx bx-file-blank"></i></a>
                 <a href="https://github.com/Sidharth200" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
 
@@ -102,8 +102,7 @@
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Profesional Skills</h2>
-                    <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id
-                        vero amet, alias architecto consectetur error eum eaque sit.</p>
+                    <p class="skills__text">Proficient in HTML, CSS, JavaScript, AI, and C++; seeking to enhance skills in full-stack development, AI/machine learning, and C++ specialization. Strong soft skills and familiarity with version control systems.</p>
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxl-html5 skills__icon'></i>
@@ -207,10 +206,10 @@
                 <form action="https://api.web3forms.com/submit" method="POST" class="contact__form">
 
                     <input type="hidden" name="access_key" value="c8b17eb6-598c-4f21-9d70-6ffebde533f6">
-                
-                    <input type="text" name="name" class="contact__input" required>
-                    <input type="email" name="email" class="contact__input" required>
-                    <textarea name="message" class="contact__input" required></textarea>
+                    <input type="text" placeholder="name" name="name" class="contact__input" required>
+                    <input type="email" placeholder="email" name="email" class="contact__input" required>
+                    <input type="Phone" placeholder="Phone No." pattern="[0-9]{10}" name="PhoneNumber" class="contact__input" required>
+                    <textarea name="message" placeholder="Query" class="contact__input" required></textarea>
                     <!-- <div class="h-captcha" data-captcha="true"></div> -->
                     <button type="submit" class="contact__button button" id="sub">Submit Form</button>
                 
@@ -224,9 +223,9 @@
     <footer class="footer">
         <p class="footer__title">Sidharth</p>
         <div class="footer__social">
-            <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
+            <a href="mailto:sidhu161999@gmail.com" target="blank" class="footer__icon"><i class='bx bxs-envelope'></i></a>
+            <a href="https://www.instagram.com/_simply_sidharth?igsh=a3AzOG1sMzA0OHRt " class="footer__icon"><i class='bx bxl-instagram'></i></a>
+            <a href="https://x.com/Sidhart02058702?t=FB_s2_3y0FcmiPfzx0iBdw&s=09" class="footer__icon"><i class='bx bxl-twitter'></i></a>
         </div>
         <p class="footer__copy">&#169; Sidharth Lohchab. All rigths reserved</p>
     </footer>
