--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-        <p class="footer__title">Sidharth</p>
+        <p class="footer__title">Sidharth Lohchab</p>
         <div class="footer__social">
             <a href="mailto:sidhu161999@gmail.com" target="blank" class="footer__icon"><i class='bx bxs-envelope'></i></a>
             <a href="https://www.instagram.com/_simply_sidharth?igsh=a3AzOG1sMzA0OHRt " class="footer__icon"><i class='bx bxl-instagram'></i></a>
