--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <input type="Phone" placeholder="Phone No." pattern="[0-9]{10}" name="PhoneNumber" class="contact__input" required>
                     <textarea name="message" placeholder="Query" class="contact__input" required></textarea>
                     <!-- <div class="h-captcha" data-captcha="true"></div> -->
-                    <button type="submit" class="contact__button button" id="sub">Submit Form</button>
+                    <button type="submit" class="contact__button button" id="sub">Submit</button>
                 
                 </form>
             </div>
