--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
                 <a href="https://www.linkedin.com/in/sidharth-lohchab-742b9a21b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                     class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://leetcode.com/Sidharth1629/" class="home__social-icon"><i class="bx bx-code-curly"></i></a>
-                <a href="/port/SidharthLohchab.pdf" download = "Sidharth Lohchab" class="home__social-icon"><i class="bx bx-file-blank"></i></a>
+                <a href="/port/SidharthLohchab.pdf" download="Sidharth Lohchab" class="home__social-icon">
+                    <i class="bx bx-file-blank"></i>
+                    Download Resume
+                </a>
+                
                 <a href="https://github.com/Sidharth200" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
 
