--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             <div class="work__container bd-grid">
                 <a href="" class="work__img">
-                    <img src="assets/img/work1.jpg" alt="">
+                    <img src="assets/img/ProjectIMG.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
                     <img src="assets/img/work2.jpg" alt="">
