--- a/index.html
+++ b/index.html
@@ -169,34 +169,24 @@
                 </div>
 
                 <div>
-                    <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                    <img src="assets/img/workimg.jpg" alt="" class="skills__img">
                 </div>
             </div>
         </section>
 
         <!--===== WORK =====-->
         <section class="work section" id="work">
-            <h2 class="section-title">Work</h2>
+            <h2 class="section-title">Projects</h2>
 
             <div class="work__container bd-grid">
-                <a href="" class="work__img">
+                <a href="https://moody-oc32bf.flutterflow.app/" class="work__img">
                     <img src="assets/img/ProjectIMG.jpg" alt="">
                 </a>
-                <a href="" class="work__img">
-                    <img src="assets/img/work2.jpg" alt="">
+                <a href="https://sidharthlohchab.netlify.app/" class="work__img">
+                    <img  padding  src="assets/img/ProjectIMG2.jpg" alt="">
                 </a>
-                <a href="" class="work__img">
-                    <img src="assets/img/work3.jpg" alt="">
-                </a>
-                <a href="" class="work__img">
-                    <img src="assets/img/work4.jpg" alt="">
-                </a>
-                <a href="" class="work__img">
-                    <img src="assets/img/work5.jpg" alt="">
-                </a>
-                <a href="" class="work__img">
-                    <img src="assets/img/work6.jpg" alt="">
-                </a>
+                
+                
             </div>
         </section>
 
