--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
                 <a href="https://sidharthlohchab.netlify.app/" class="work__img">
                     <img  padding  src="assets/img/ProjectIMG2.jpg" alt="">
                 </a>
-                
+                <a href="https://amazon-clone-sidharth.netlify.app/" class="work__img">
+                    <img  padding  src="assets/project3.jpg" alt="">
+                </a>
                 
             </div>
         </section>
