--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://www.linkedin.com/in/sidharth-lohchab-742b9a21b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                     class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://leetcode.com/Sidharth1629/" class="home__social-icon"><i class="bx bx-code-curly"></i></a>
-                <a href="/port/SidharthLohchab.pdf" download="Sidharth Lohchab's CV" class="home__social-icon">
+                <a href="/Sidharth-Lohchab-Resume.pdf" download="Sidharth Lohchab's CV" class="home__social-icon">
                 <i class="bx bx-file-blank"></i></a>
                 
                 <a href="https://github.com/Sidharth200" class="home__social-icon"><i class='bx bxl-github'></i></a>
@@ -217,7 +217,7 @@
     <footer class="footer">
         <p class="footer__title">Sidharth Lohchab</p>
         <div class="footer__social">
-            <a href="mailto:sidhu161999@gmail.com" target="blank" class="footer__icon"><i class='bx bxs-envelope'></i></a>
+            <a href="mailto:sidharthlohchab902@gmail.com" target="blank" class="footer__icon"><i class='bx bxs-envelope'></i></a>
             <a href="https://www.instagram.com/_simply_sidharth?igsh=a3AzOG1sMzA0OHRt " class="footer__icon"><i class='bx bxl-instagram'></i></a>
             <a href="https://x.com/Sidhart02058702?t=FB_s2_3y0FcmiPfzx0iBdw&s=09" class="footer__icon"><i class='bx bxl-twitter'></i></a>
         </div>
